...
                android:textSize="35sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_below="@id/signuptitle"
                android:background="#ffffff"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:padding="20dp"
...
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_below="@id/email"
                android:background="#30ffffff"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
...
                android:autofillHints="password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repassword"
                android:layout_below="@id/password"
                android:background="#30ffffff"
                android:hint="@string/re_password"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
...
                android:drawablePadding="20dp"
                android:autofillHints="password"
                android:inputType="textPassword" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_below="@id/repassword"
                android:background="#30ffffff"
                android:hint="First and Last Name"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:drawablePadding="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:layout_below="@id/name"
                android:background="#30ffffff"
                android:hint="phone"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="number" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Address"
                android:layout_below="@id/phone"
                android:background="#30ffffff"
                android:hint="Address"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:drawablePadding="20dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/postalCode"
                android:layout_below="@id/Address"
                android:background="#ffffff"
                android:hint="Postal Code"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="20dp"
...


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:id="@+id/signupbtn"
                android:text="Register"
                android:textColor="@color/white"
                android:background="@drawable/round_back_blue_10"
                android:layout_below="@id/postalCode"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
...
