...
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/emailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="#ffffff"
                        android:textSize="18sp"

...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/supportLayout"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.333"
                                android:background="@drawable/grey_background"
                                android:elevation="5dp"
...
                                    android:textColor="#000000"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/settingsBtn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.333"
                                android:background="@drawable/grey_background"
                                android:elevation="5dp"
...
                                android:layout_weight="1"
                                android:text="Postal Code:"
                                android:textColor="@color/purple_500"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/logoutBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="35dp"
                                android:layout_marginRight="50dp"
                                android:text="Log Out"
                                android:textColor="#BA160C"
...



    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>
...
