<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".SupportChatActivity2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:windowSoftInputMode="adjustResize"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">


        <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:hint="Connecting with manager...\n"
            android:textSize="20dp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageLayout">
            <EditText
                android:layout_height="50dp"
                android:layout_width="320dp"
                android:hint="message"
                android:textSize="20dp"
                android:id="@+id/msgEdt" />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:textColor="#3AA8C1"
                android:text="Send"
                android:id="@+id/sendBtn" />


        </RelativeLayout>



            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/night_mode"
                android:layout_marginLeft="150dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Support Chat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="160dp"
                android:textColor="#BA160C"
                android:text="disconnect"
                android:id="@+id/backMainBtn" />


    </LinearLayout>




</RelativeLayout>