<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">

        <TextView
            android:id="@+id/loginText"
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/loginButton"
            android:text="Login"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordTxt"
                android:layout_alignParentEnd="true"
                android:text="Forgot Password"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="51dp"
                android:layout_marginTop="170dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="New to Package Hub? " />

            <Button
                android:id="@+id/signingUpButton"
                android:layout_width="97dp"
                android:layout_height="40dp"
                android:layout_marginTop="160dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="71dp"
                android:layout_marginBottom="7dp"
                android:layout_toEndOf="@+id/textView8"
                android:background="?android:attr/selectableItemBackground"
                android:text="Sign Up"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="20dp" />

        </RelativeLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignupBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="invisible"/>





    </LinearLayout>




</RelativeLayout>